header 업데이트 및 index페이지 수정

--- a/01_사업소개_01_인사말.html
+++ b/01_사업소개_01_인사말.html
@@ -47,108 +47,103 @@
                         <li>
                             <a href="#">사업소개</a>
                             <ul class="gnb-depth2">
-                                <li class="tit">사업소개</li>
                                 <li>
-                                    <a href="#">인사말</a>
+                                    <a href="./01_사업소개_01_인사말.html"><span class="txt">인사말</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">추진배경 및 과제목표</a>
+                                    <a href="./01_사업소개_02_과제목표 및 추진전략.html"><span class="txt">추진배경 및 과제목표</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">조직체계 및 추진내용</a>
+                                    <a href="./01_사업소개_02_조직체계 및 추진내용.html"><span class="txt">조직체계 및 추진내용</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">추진일정</a>
+                                    <a href="#"><span class="txt">추진일정</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">협력기관 소개</a>
+                                    <a href="#"><span class="txt">협력기관 소개</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">파트너십 안내</a>
+                                    <a href="#"><span class="txt">파트너십 안내</span></a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">교육프로그램</a>
                             <ul class="gnb-depth2">
-                                <li class="tit">교육프로그램</li>
                                 <li>
-                                    <a href="./02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html">AI산업안전관리교육</a>
+                                    <a href="./02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html"><span class="txt">AI산업안전관리교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">농업드론방제교육</a>
+                                    <a href="#"><span class="txt">농업드론방제교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">생성형AI 이해와 직무활용</a>
+                                    <a href="#"><span class="txt">생성형AI 이해와 직무활용</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">구매조달교육</a>
+                                    <a href="#"><span class="txt">구매조달교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">장애인 인식개선 강사양성</a>
+                                    <a href="#"><span class="txt">장애인 인식개선 강사양성</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">귀농귀촌농업인역량강화교육</a>
+                                    <a href="#"><span class="txt">귀농귀촌농업인역량강화교육</span></a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">프로그램신청</a>
                             <ul class="gnb-depth2">
-                                <li class="tit">프로그램신청</li>
                                 <li>
-                                    <a href="#">프로그램 신청안내</a>
+                                    <a href="#"><span class="txt">프로그램 신청안내</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">온라인 강좌</a>
+                                    <a href="#"><span class="txt">온라인 강좌</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">오프라인 교육</a>
+                                    <a href="#"><span class="txt">오프라인 교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">수료 인증</a>
+                                    <a href="#"><span class="txt">수료 인증</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">진로 연계 상담</a>
+                                    <a href="#"><span class="txt">진로 연계 상담</span></a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">뉴스·자료실</a>
                             <ul class="gnb-depth2">
-                                <li class="tit">뉴스·자료실</li>
                                 <li>
-                                    <a href="#">보도자료</a>
+                                    <a href="./04_뉴스자료실_01_보도자료_01_리스트.html"><span class="txt">보도자료</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">교육자료</a>
+                                    <a href="./04_뉴스자료실_02_교육자료_01_리스트.html"><span class="txt">교육자료</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">카드뉴스</a>
+                                    <a href="./04_뉴스자료실_03_카드뉴스_01_리스트.html"><span class="txt">카드뉴스</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">영상뉴스</a>
+                                    <a href="./04_뉴스자료실_04_영상뉴스_01_리스트.html"><span class="txt">영상뉴스</span></a>
                                 </li>
                             </ul>
                         </li>
                         <li>
                             <a href="#">참여마당</a>
                             <ul class="gnb-depth2">
-                                <li class="tit">참여마당</li>
                                 <li>
-                                    <a href="#">Q&A</a>
+                                    <a href="#"><span class="txt">Q&A</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">교육후기</a>
+                                    <a href="#"><span class="txt">교육후기</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">공지사항</a>
+                                    <a href="#"><span class="txt">공지사항</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">제안·민원접수</a>
+                                    <a href="#"><span class="txt">제안·민원접수</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">1:1 문의</a>
+                                    <a href="#"><span class="txt">1:1 문의</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -215,6 +210,113 @@
             </section>
         </main>
         <footer>
+            <!-- 협력기관 배너 슬라이더 -->
+            <div class="bd-line-grp">
+                <div class="footer-banner-slider max-width-inner">
+                    <div class="swiper mySwiper type02">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn01.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn02.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn03.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn04.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn05.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn06.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn01.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn02.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn03.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn04.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn05.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                            <li class="swiper-slide">
+                                <a href="#" target="_blank">
+                                    <img src="./images/common/img_footer_bn06.svg" alt="배너 아이콘 이미지">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="swiper-button">
+                        <button type="button" class="swiper-button-next"><img src="./images/common/icon_footer_btn_next.svg" alt="다음버튼 아이콘"></button>
+                        <button type="button" class="swiper-button-prev"><img src="./images/common/icon_footer_btn_prev.svg" alt="이전버튼 아이콘"></button>
+                    </div>
+                    <script>
+                    const swiper2 = new Swiper(".mySwiper.type02", {
+                        slidesPerView: "auto", // 한번에 보여지는 슬라이드 숫자
+                        slidesPerGroup: 1, // 한번에 이동되는 슬라이드 숫자
+                        loop: true,
+                        breakpoints: {
+                            0: {
+                                spaceBetween: 14,
+                            },
+                            1024: {
+                                spaceBetween: 30
+                            }
+                        },
+                        navigation: {
+                            nextEl: ".footer-banner-slider .swiper-button-next",
+                            prevEl: ".footer-banner-slider .swiper-button-prev",
+                        },
+                    });
+                    /* 자동재생 추후 적용 여부 확인 후 추가해서 적용
+                    // 정지 버튼 
+                    document.querySelector(".mySwiper.type02 .swiper-autoplay-button .pause").addEventListener("click", function() {
+                        swiper2.autoplay.stop();
+                        this.style.display = "none";
+                        document.querySelector(".mySwiper.type02 .swiper-autoplay-button .play").style.display = "block";
+                    });
+    
+                    // 재생 버튼
+                    document.querySelector(".mySwiper.type02 .swiper-autoplay-button .play").addEventListener("click", function() {
+                        swiper2.autoplay.start();
+                        this.style.display = "none";
+                        document.querySelector(".mySwiper.type02 .swiper-autoplay-button .pause").style.display = "block";
+                    });
+                    */
+                    </script>
+                </div>
+            </div>
             <!-- 약관/패밀리사이트 등 상단 정보 -->
             <div class="footer-cont max-width-inner">
                 <div class="logo-grp">
@@ -227,16 +329,24 @@
                     </div>
                     <div class="txt-list">
                         <p>31020 충청남도 천안시 서북구성환읍 대학로 91</p>
-                        <dl>
-                            <dt>개인정보 보호책임자</dt>
-                            <dd>kigon@nsu.ac.kr</dd>
-                            <dt>TEL</dt>
-                            <dd>041-580-2000</dd>
-                            <dt>FAX</dt>
-                            <dd>041-582-2117</dd>
-                            <dt>Email</dt>
-                            <dd>webmaster@nsu.ac.kr</dd>
-                        </dl>
+                        <div class="dl-list">
+                            <dl>
+                                <dt>개인정보 보호책임자</dt>
+                                <dd>kigon@nsu.ac.kr</dd>
+                            </dl>
+                            <dl>
+                                <dt>TEL</dt>
+                                <dd>041-580-2000</dd>    
+                            </dl>
+                            <dl>
+                                <dt>FAX</dt>
+                                <dd>041-582-2117</dd>
+                            </dl>
+                            <dl>
+                                <dt>Email</dt>
+                                <dd>webmaster@nsu.ac.kr</dd>
+                            </dl>
+                        </div>
                     </div>
                     <address>© 2025 BY NAMSEOUL UNIVERSITY. ALL RIGHTS RESERVED.</address>
                 </div>
