--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
                             <a href="#">사업소개</a>
                             <ul class="gnb-depth2">
                                 <li>
-                                    <a href="#">인사말</a>
+                                    <a href="./01_사업소개_01_인사말.html"><span class="txt">인사말</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">추진배경 및 과제목표</a>
+                                    <a href="./01_사업소개_02_과제목표 및 추진전략.html"><span class="txt">추진배경 및 과제목표</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">조직체계 및 추진내용</a>
+                                    <a href="./01_사업소개_02_조직체계 및 추진내용.html"><span class="txt">조직체계 및 추진내용</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">추진일정</a>
+                                    <a href="#"><span class="txt">추진일정</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">협력기관 소개</a>
+                                    <a href="#"><span class="txt">협력기관 소개</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">파트너십 안내</a>
+                                    <a href="#"><span class="txt">파트너십 안내</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -67,22 +67,22 @@
                             <a href="#">교육프로그램</a>
                             <ul class="gnb-depth2">
                                 <li>
-                                    <a href="#">AI산업안전관리교육</a>
+                                    <a href="./02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html"><span class="txt">AI산업안전관리교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">농업드론방제교육</a>
+                                    <a href="#"><span class="txt">농업드론방제교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">생성형AI 이해와 직무활용</a>
+                                    <a href="#"><span class="txt">생성형AI 이해와 직무활용</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">구매조달교육</a>
+                                    <a href="#"><span class="txt">구매조달교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">장애인 인식개선 강사양성</a>
+                                    <a href="#"><span class="txt">장애인 인식개선 강사양성</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">귀농귀촌농업인역량강화교육</a>
+                                    <a href="#"><span class="txt">귀농귀촌농업인역량강화교육</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -90,19 +90,19 @@
                             <a href="#">프로그램신청</a>
                             <ul class="gnb-depth2">
                                 <li>
-                                    <a href="#">프로그램 신청안내</a>
+                                    <a href="#"><span class="txt">프로그램 신청안내</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">온라인 강좌</a>
+                                    <a href="#"><span class="txt">온라인 강좌</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">오프라인 교육</a>
+                                    <a href="#"><span class="txt">오프라인 교육</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">수료 인증</a>
+                                    <a href="#"><span class="txt">수료 인증</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">진로 연계 상담</a>
+                                    <a href="#"><span class="txt">진로 연계 상담</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -110,16 +110,16 @@
                             <a href="#">뉴스·자료실</a>
                             <ul class="gnb-depth2">
                                 <li>
-                                    <a href="#">보도자료</a>
+                                    <a href="./04_뉴스자료실_01_보도자료_01_리스트.html"><span class="txt">보도자료</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">교육자료</a>
+                                    <a href="./04_뉴스자료실_02_교육자료_01_리스트.html"><span class="txt">교육자료</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">카드뉴스</a>
+                                    <a href="./04_뉴스자료실_03_카드뉴스_01_리스트.html"><span class="txt">카드뉴스</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">영상뉴스</a>
+                                    <a href="./04_뉴스자료실_04_영상뉴스_01_리스트.html"><span class="txt">영상뉴스</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -127,19 +127,19 @@
                             <a href="#">참여마당</a>
                             <ul class="gnb-depth2">
                                 <li>
-                                    <a href="#">Q&A</a>
+                                    <a href="#"><span class="txt">Q&A</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">교육후기</a>
+                                    <a href="#"><span class="txt">교육후기</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">공지사항</a>
+                                    <a href="#"><span class="txt">공지사항</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">제안·민원접수</a>
+                                    <a href="#"><span class="txt">제안·민원접수</span></a>
                                 </li>
                                 <li>
-                                    <a href="#">1:1 문의</a>
+                                    <a href="#"><span class="txt">1:1 문의</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -560,7 +560,7 @@
                 link.style.height = '26.8rem';
                 link.style.marginTop = '4.2rem';
 
-                if (window.innerWidth <= 768) {
+                if (window.innerWidth <= 1024) {
                     link.style.width = '18.3rem';
                     link.style.height = '20.5rem'; 
                     link.style.marginTop = '3.2rem'; 
@@ -576,7 +576,7 @@
                 activeSlide.style.height = '31rem';
                 activeSlide.style.marginTop = '0';
 
-                if (window.innerWidth <= 768) {
+                if (window.innerWidth <= 1024) {
                     activeSlide.style.width = '29.6rem';
                     activeSlide.style.height = '23.5rem';   
                 }
