script 추가 및 css 수정

--- a/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
+++ b/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
@@ -560,8 +560,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
