--- a/04_뉴스자료실_01_보도자료_01_리스트.html
+++ b/04_뉴스자료실_01_보도자료_01_리스트.html
@@ -453,8 +453,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
