--- a/04_뉴스자료실_01_보도자료_02_상세.html
+++ b/04_뉴스자료실_01_보도자료_02_상세.html
@@ -342,8 +342,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
