--- a/04_뉴스자료실_02_교육자료_01_리스트.html
+++ b/04_뉴스자료실_02_교육자료_01_리스트.html
@@ -433,8 +433,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
