--- a/04_뉴스자료실_02_교육자료_02_상세.html
+++ b/04_뉴스자료실_02_교육자료_02_상세.html
@@ -335,8 +335,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
