--- a/04_뉴스자료실_04_영상뉴스_01_리스트.html
+++ b/04_뉴스자료실_04_영상뉴스_01_리스트.html
@@ -425,8 +425,6 @@
         </footer>
     </div>
     <script src="./js/common.js"></script>
-    <script>
-
-    </script>
+    <script src="./js/mobile.js"></script>
 </body>
 </html>
