--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <a href="#"><span class="txt">장애인 인식개선 강사양성</span></a>
                                 </li>
                                 <li>
-                                    <a href="#"><span class="txt">귀농귀촌농업인역량강화교육</span></a>
+                                    <a href="./02_교육프로그램_02_귀농·귀촌·농업인역량강화교육_01_교육개요.html"><span class="txt">귀농귀촌농업인역량강화교육</span></a>
                                 </li>
                             </ul>
                         </li>
