--- a/02_교육프로그램_02_귀농·귀촌·농업인역량강화교육_01_교육개요.html
+++ b/02_교육프로그램_02_귀농·귀촌·농업인역량강화교육_01_교육개요.html
@@ -686,59 +686,18 @@
                                             </div>
                                         </li>
                                     </ul>
+                                    <span class="desc">※ 2차년도~5차년도 교육프로그램은 지역수요의 니즈에 따라 선택 운영될 수 있음.</span>
                                 </div>
                             </div>
                             <div class="tab-content" id="tab1-con3">
                                 <p class="info-txt">
-                                    산업 현장에서 이용하는 최신 AI 안전 솔루션을 실습하고,<br>
-                                    실제 현장에서 자주 발생하는 비상상황에 대한 사례를 체험합니다.
+                                    충남지역 1차 산업 종사자(귀농, 귀촌, 농업인 등)의 부가가치 창출 및 역량강화를 위한<br class="pc-only">
+                                    교육 제공으로 농업생산기반 강화, 농가소득증대, 귀농 및귀촌인의정착률을 향상합니다.
                                 </p>
-                                <div class="img-frame practice">
-                                    <img src="./images/common/img_sample_practice.webp" alt="비상상황 샘플 이미지">
+                                <div class="inner bg-wh">
+                                    <img src="./images/common/sample-img.png" alt="샘플 이미지">
+                                    <img src="./images/common/sample-img02.png" alt="샘플 이미지">
                                 </div>
-                                
-                                <div class="inner">
-                                    <h3 class="h3-title"><i class="ico icon-h3"></i>비상상황 체험 예시</h3>
-                                    <ul class="box-list emergency">
-                                        <li>
-                                            <img src="./images/common/icon_emergency01.svg" alt="비상상황 체험 예시1">
-                                            <span class="txt">
-                                                안전모<br>미착용 시
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <img src="./images/common/icon_emergency02.svg" alt="비상상황 체험 예시2">
-                                            <span class="txt">
-                                                작업자<br>추락위험 감시
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <img src="./images/common/icon_emergency03.svg" alt="비상상황 체험 예시3">
-                                            <span class="txt">
-                                                작업자<br>출입카운트 감시
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <img src="./images/common/icon_emergency04.svg" alt="비상상황 체험 예시4">                                            <span class="txt">
-                                                화재나<br>연기 발생시
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <img src="./images/common/icon_emergency05.svg" alt="비상상황 체험 예시5">
-                                            <span class="txt">
-                                                작업자<br>쓰러짐 발생시
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <img src="./images/common/icon_emergency06.svg" alt="비상상황 체험 예시6">
-                                            <span class="txt">
-                                                작업장 위험구역<br>진입 감시
-                                            </span>
-                                        </li>
-                                    </ul>
-                                </div>
-
-
                             </div>
                         </div>
                     </div>
