교육프로그램 css 수정

--- a/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
+++ b/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
@@ -180,7 +180,7 @@
                                 </p>
                                 <div class="inner">
                                     <h3 class="h3-title"><i class="ico icon-h3"></i>핵심목표</h3>
-                                    <div class="wh-box">
+                                    <div class="wht-box">
                                         <p class="bullet">AI 기술 활용 지식을 통한 산업 안전 관리 역량 강화</p>
                                         <p class="bullet">
                                             중대재해처벌법에 효과적으로 대응할 수 있는 지식 증진<br>
