교육프로그램 - 장애인 pub작업

--- a/02_교육프로그램_05_장애인 직업교육_01_교육개요.html
+++ b/02_교육프로그램_05_장애인 직업교육_01_교육개요.html
@@ -158,14 +158,14 @@
                         <a href="#">교육프로그램</a>
                     </li>
                     <li>
-                        <a href="./">농업 드론 방제 교육</a>
+                        <a href="./">장애인 직업교육</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap">
-                <h2 class="h2-title">농업 드론 방제 교육</h2>
+                <h2 class="h2-title">장애인 직업교육</h2>
 
-                <div class="tab-container sub has-img drone">
+                <div class="tab-container sub has-img handicapped">
                         <ul class="tab-head">
                             <li><button type="button" class="tab-menu" data-tab="tab1-con1">교육개요</button></li>
                             <li><button type="button" class="tab-menu is-active" data-tab="tab1-con2">교육 프로그램 소개</button></li>
@@ -174,14 +174,14 @@
                         <div class="tab-content-wrap">
                             <div class="tab-content" id="tab1-con1">
                                 <p class="info-txt">
-                                    데이터, 네트워크, 인공지능을 접목한 드론시스템으로무인〮무조종으로<br class="pc-only">
-                                    군집비행, 야간비행, 대규모 농경지 관리에 효율성을 극대화할 수 있는<br class="pc-only"> 
-                                    농업(농촌)통합운영관리 플랫폼 교육입니다.
+                                    장애인 인식 개선 및 체육 스포츠 활동을 통한 장애인 문화향유권 보장과장애인 강사 수료증<br calss="pc-only">
+                                    지급을 통한 동기 부여 및 사회 적용력 강화, 충남지역 장애인의 건강한 삶 영위를 위한<br class="pc-only">
+                                    장애인 정주환경을 조성합니다.
                                 </p>
                                 <div class="inner">
                                     <h3 class="h3-title"><i class="ico icon-h3"></i>핵심목표</h3>
                                     <div class="wh-box">
-                                        <strong class="title">농촌 정주환경 생태계 조성을 위한 “ 농촌 드론 방제 교육 및 현장 실습 교육 실시 ”</strong>
+                                        <strong class="title">충남지역 장애인 ‘희망동행’ 정주환경 마련을 위한 “장애인인식개선/장애인스포츠 강사 직업교육 수행”</strong>
                                     </div>
                                 </div>
 
@@ -189,49 +189,19 @@
                                     <h3 class="h3-title"><i class="ico icon-h3"></i>교육수행체계</h3>
                                     <ul class="round-box">
                                         <li>
-                                            <p class="tit-grp">
-                                                <span class="txt-sec big">D</span>
-                                                <span class="txt">
-                                                    <b>농작물 D</b>
-                                                    <span class="desc">ata</span>
-                                                </span>
-                                            </p>
+                                            <div class="tit-grp"><b>문화예술 장애인 인식 개선 강사 양성</b></div>
                                             <div class="txt-grp">
-                                                <strong class="title">데이터를 수집〮분석〮검증</strong>
-                                                <p>미래농업 예측<br>(농작업가상시뮬레이션)</p>
-                                                <p>농작물 수급조절 방안<br>(분석, 예측데이터 기반 방안 마련)</p>
-                                                <p>농작물 수확량 예측<br>(작물별, 품종별 예측)</p>
+                                                <p class="bullet">장애인 사회 참여 기회 확대</p>
+                                                <p class="bullet">강사 자격증 획득을 통한 동기 부여 및 사회 적응력 강화</p>
+                                                <p class="bullet">장애인의 건강한 삶 영위를 위한 환경 조성</p>
                                             </div>
                                         </li>
                                         <li>
-                                            <p class="tit-grp">
-                                                <span class="txt-sec big">N</span>
-                                                <span class="txt">
-                                                    <b>농업종사자 N</b>
-                                                    <span class="desc">etwork</span>
-                                                </span>
-                                            </p>
+                                            <div class="tit-grp"><b>문화예술 스포츠 강사 인턴(3급) 양성</b></div>
                                             <div class="txt-grp">
-                                                <strong class="title">네트워크 초연결</strong>
-                                                <p>고객 네트워크 연결<br>(농민, 지자체, 기술센터, 농협, 작업자)</p>
-                                                <p>농작물 생육 네트워크 연결<br>(작물 생육이상, 토양성분, 수분함량)</p>
-                                                <p>재배 네트워크 연결<br>(일지, 제초, 방제, 수확)</p>
-                                                <p>외부 데이터 연결<br>(크레이, 날씨)</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <p class="tit-grp">
-                                                <span class="txt-sec big">A</span>
-                                                <span class="txt">
-                                                    <b>자율방제 드록 A</b>
-                                                    <span class="desc">I</span>
-                                                </span>
-                                            </p>
-                                            <div class="txt-grp">
-                                                <strong class="title">인공지능형 자율드론</strong>
-                                                <p>자율운영 드론스테이션<br>(무인 자동개폐, 자동충전교체)</p>
-                                                <p>데이터 수집드론<br>(고정밀디지털맵, 농작물 생육정보)</p>
-                                                <p>농작물 처방드론<br>(무조종 파종, 제초, 병해충 처방)</p>
+                                                <p class="bullet">장애인의 건강한 삶 영위를 위한 환경 조성</p>
+                                                <p class="bullet">장애인 건강관리 강화</p>
+                                                <p class="bullet">체육 활동을 통한 장애인의 문화 향유권 보장</p>
                                             </div>
                                         </li>
                                     </ul>
@@ -239,41 +209,55 @@
                             </div>
                             <div class="tab-content is-active" id="tab1-con2">
                                 <p class="info-txt">
-                                    데이터, 네트워크, 인공지능을 접목한 드론시스템으로무인〮무조종으로<br class="pc-only">
-                                    군집비행, 야간비행, 대규모 농경지 관리에 효율성을 극대화할 수 있는<br class="pc-only"> 
-                                    농업(농촌)통합운영관리 플랫폼 교육입니다.
+                                    장애인 인식 개선 및 체육 스포츠 활동을 통한 장애인 문화향유권 보장과장애인 강사 수료증<br class="pc-only">
+                                    지급을 통한 동기 부여 및 사회 적용력 강화, 충남지역 장애인의 건강한 삶 영위를 위한<br class="pc-only">
+                                    장애인 정주환경을 조성합니다.
                                 </p>
 
-                                <div class="inner bg-wh job">
+                                <div class="inner bg-wh">
                                     <dl class="bg-box">
                                         <dt>학습목표</dt>
                                         <dd>
-                                            데이터(Data), 네트워크(Network), 인공지능(AI)를 기반으로 하는 DNA 농업용 드론 시스템의 원리와 운용 방법을 습득하고, 현장 실습 중심의 훈련을 통해 농업 현장에 즉시 투입 가능한 스마트농업 드론 전문 인력을 양성하는 것을 목표로 함
+                                            충남지역 장애인 ‘희망동행’ 정주환경 마련을 위한 “장애인인식개선/장애인스포츠 강사 직업교육 수행”
                                         </dd>
                                     </dl>
 
                                     <h4 class="h4-title">교육내용 및 구성</h4>
                                     <dl class="list-txt type02">
                                         <dt>교육과정</dt>
-                                        <dd><p class="point">(기본과정) 드론기본교육</p></dd>
+                                        <dd><p class="point">문화예술 장애인 인식 개선 강사 양성 교육</p></dd>
                                         <dt>주요내용</dt>
                                         <dd>
-                                            <p class="bullet">드론의 개념 및 항공안전법, 드론 구성요소, 비행원리, 주변기기 등 드론 개념 이해</p>
+                                            <p>
+                                                1. 장애 감수성 인식<br>
+                                                &nbsp;&nbsp;· 장애인 감수성 이해 및 장애인 평견 해소<br>
+                                                2. 장애 유형 인식<br>
+                                                &nbsp;&nbsp;· 장애인 유형 이해 및 예술 연계 토론<br>
+                                                3. 장애 체육 인식<br>
+                                                &nbsp;&nbsp;· 장애인 정도에 따른 체육 활동 인식
+                                            </p>
                                         </dd>
                                         <dt>교육방식</dt>
-                                        <dd><p>이론</p></dd>
+                                        <dd><p>이론 강의 + 사례 중심 강의</p></dd>
                                         <dt>교육일정</dt>
                                         <dd><p>-</p></dd>
                                     </dl>
                                     <dl class="list-txt type02">
                                         <dt>교육과정</dt>
-                                        <dd><p class="point">(기본과정) 드론방제 기본교육</p></dd>
+                                        <dd><p class="point">문화예술 스포츠 강사 인턴(3급) 양성 교육</p></dd>
                                         <dt>주요내용</dt>
                                         <dd>
-                                            <p class="bullet">드론 방제 개념 및 원리, 구성요소, 기체 설정, 좌표값 설정 등 드론 방제 구성 이해</p>
+                                            <p>
+                                                1. 장애인 편견 해소<br>
+                                                &nbsp;&nbsp;· 장애인 편견 해소 및 사회적 적응 방안 마련<br>
+                                                2. 장애 댄스 스포츠 강사 인턴과정(3급)<br>
+                                                &nbsp;&nbsp;· 지체, 시각, 청각 장애인별 스포츠 댄스 그룹 활동<br>
+                                                3. 장애 체육 댄스 체험<br>
+                                                &nbsp;&nbsp;· 저강도 댄스 및 중증 장애인 체험    
+                                            </p>
                                         </dd>
                                         <dt>교육방식</dt>
-                                        <dd><p>이론</p></dd>
+                                        <dd><p>실습중심 강의</p></dd>
                                         <dt>교육일정</dt>
                                         <dd><p>-</p></dd>
                                     </dl>
@@ -319,21 +303,12 @@
                             </div>
                             <div class="tab-content" id="tab1-con3">
                                 <p class="info-txt">
-                                    산업 현장에서 이용하는 최신 AI 안전 솔루션을 실습하고,<br class="pc-only">
-                                    실제 현장에서 자주 발생하는 비상상황에 대한 사례를 체험합니다.
+                                    장애인 인식 개선 및 체육 스포츠 활동을 통한 장애인 문화향유권 보장과장애인 강사 수료증<br class="pc-only">
+                                    지급을 통한 동기 부여 및 사회 적용력 강화, 충남지역 장애인의 건강한 삶 영위를 위한<br class="pc-only">
+                                    장애인 정주환경을 조성합니다.
                                 </p>
                                 <div class="inner">
-                                    <h3 class="h3-title"><i class="ico icon-h3"></i>관리자 사용방법</h3>
-                                    <div class="inner bg-wh">
-                                        <img src="./images/common/img_sample_drone_01.png" alt="샘플 이미지">
-                                    </div>
-                                </div>
-
-                                <div class="inner">
-                                    <h3 class="h3-title"><i class="ico icon-h3"></i>방제 작업자</h3>
-                                    <div class="inner bg-wh">
-                                        <img src="./images/common/img_sample_drone_02.png" alt="샘플 이미지">
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
